# tarantula

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml  build.rs
cli/src/: app.rs  lib.rs  main.rs  test.rs
cli/src/app/: run.rs
cli/src/cli/: run.rs
cli/src/domain/: app.rs
cli/src/infra/: app_data.rs  config_data.rs
shared/: Cargo.toml
shared/src/: lib.rs  utils.rs
shared/src/app/: config.rs  run.rs  uninstall.rs  update.rs
src/: infra.rs  lib.rs
src/app/: config.rs  install.rs  run.rs  uninstall.rs  update.rs
src/cli/: run.rs
src/domain/: app.rs
src/infra/: app_data.rs  config_data.rs  desktop_data.rs  icons.rs  project_data.rs
src/test/: create_test_config.rs
src/ui/: ui.rs
ui/: Cargo.toml  package.json  pnpm-lock.yaml
ui/src/: App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs
