[package]
name = "tarantula"
version = "0.4.2"
edition = "2024"
authors = ["Jacob Patton"]
repository = "https://github.com/rustybucket-cloud/tarantula"
license = "MIT"
description = "A tool for running web apps like desktop apps."

[dependencies]
clap = {version = "4.5.48", features = ["derive"]}
dirs = "6.0.0"
exec = "0.3.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
