[package]
name = "tarantula"
version = "0.7.0"
edition = "2024"
authors = ["Jacob Patton"]
repository = "https://github.com/rustybucket-cloud/tarantula"
license = "MIT"
description = "A tool for running web apps like desktop apps."

[dependencies]
clap = {version = "4.5.48", features = ["derive"]}
dirs = "6.0.0"
shared = { path = "../shared" }
